--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.5.1",
     "cheerio": "^1.0.0-rc.1",
     "debug": "^2.6.8",
+    "node-schedule": "^1.3.0",
     "npm": "^5.8.0",
     "request": "^2.85.0"
   }
