--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.22.0",
     "node-schedule": "^1.3.0",
     "npm": "^5.8.0",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "transmission": "^0.4.9"
   }
 }
