--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-schedule": "^1.3.0",
     "npm": "^5.8.0",
     "request": "^2.85.0",
-    "transmission": "^0.4.9"
+    "transmission": "^0.4.9",
+    "got": "^9.6.0"
   }
 }
