--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "bluebird": "^3.5.1",
     "cheerio": "^1.0.0-rc.1",
     "debug": "^2.6.8",
+    "got": "^9.6.0",
     "moment": "^2.22.0",
     "node-schedule": "^1.3.0",
     "npm": "^5.8.0",
     "request": "^2.85.0",
-    "transmission": "^0.4.9",
-    "got": "^9.6.0"
+    "transmission": "^0.4.9"
   }
 }
